# js-blob-analysis

./: ANALYSIS.md  README.md  pyproject.toml
malware_dropper_samples/: sample1.7456491591821f8c46a832a43fde4b6be57ab53d.malware_sample  sample2.76b7975b3e87dcb2f8ec935cde8fbd3f8a912f0a.malware_sample
malware_payload_samples_output/: payload1_bsc_0xe40a40c6cef6461da5bb582f6da177b3197225dc4ea307414cde232ad9bb2054_deobfu.malware_sample  payload1_bsc_0xe40a40c6cef6461da5bb582f6da177b3197225dc4ea307414cde232ad9bb2054_deobfu_beautified.malware_sample  payload1_bsc_0xe40a40c6cef6461da5bb582f6da177b3197225dc4ea307414cde232ad9bb2054_raw.malware_sample  payload1_bsc_0xe40a40c6cef6461da5bb582f6da177b3197225dc4ea307414cde232ad9bb2054_raw_beautified.malware_sample  payload1_inner_bsc_0xc8090a40230cfacb82ead30d8d290a22f8e5f508800d725f8ae2dd1d35e03427_raw.malware_sample  payload1_inner_bsc_0xc8090a40230cfacb82ead30d8d290a22f8e5f508800d725f8ae2dd1d35e03427_raw_beautified.malware_sample  payload2_bsc_0x13e3ce3aefc019258c618265241ec1c51d858e6e5457a48ea5e38820fc4ba9a1_deobfu.malware_sample  payload2_bsc_0x13e3ce3aefc019258c618265241ec1c51d858e6e5457a48ea5e38820fc4ba9a1_deobfu_beautified.malware_sample  payload2_bsc_0x13e3ce3aefc019258c618265241ec1c51d858e6e5457a48ea5e38820fc4ba9a1_raw.malware_sample  payload2_bsc_0x13e3ce3aefc019258c618265241ec1c51d858e6e5457a48ea5e38820fc4ba9a1_raw_beautified.malware_sample  payload2_inner_5-143_raw.malware_sample  payload2_inner_5-143_raw_beautified.malware_sample
malware_payload_samples_output_manual/: manual_fixup_payload2_bsc_deobfu.py  (+6 more)
src/: cli.py  (+3 more)
(+4 files in other folders)
